--- a/ui/less/main.less
+++ b/ui/less/main.less
@@ -1,11 +1,12 @@
 html, body, main {
   height: 100%;
+  margin: 0;
 }
 
 #digraph {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  left: 0;
   top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
