--- a/ui/app/main.less
+++ b/ui/app/main.less
@@ -1,4 +1,5 @@
 @import '../../node_modules/normalize.css/normalize.css';
+@import '../../node_modules/vis/dist/vis.min.css';
 
 html, body,
 [data-reactroot],
@@ -13,8 +14,9 @@ html, body,
 @header-height: 2.5rem;
 @statusbar-height: 1.5rem;
 @content-height: (100vh - @header-height - @statusbar-height);
-@search-height: 2rem;
-@listview-height: (@content-height - @search-height);
+@detailview-height: 12rem;
+@search-height: 1.5rem;
+@listview-height: (@content-height - @detailview-height - @search-height);
 
 .home-container {
 
@@ -50,7 +52,7 @@ html, body,
   display: grid;
   grid-template-rows: @statusbar-height auto;
   grid-template-columns: 1fr 15rem;
-  grid-template-areas: "statusbar statusbar" "digraph listview";
+  grid-template-areas: "statusbar statusbar" "digraph detailview";
 
   .digraph-statusbar {
     grid-area: statusbar;
@@ -70,23 +72,31 @@ html, body,
     height: @content-height;
   }
 
-  .digraph-listview {
-    grid-area: listview;
+  .detail-view {
+    grid-area: detailview;
     height: @content-height;
     border-left: solid #d3d3d3 0.3rem;
+    width: 100%;
 
-    label.filter {
-      width: 100%;
-      height: @search-height;
-      margin: 0;
+    .digraph-detailview {
+      height: @detailview-height;
+      overflow: auto;
     }
 
-    .itemlist {
-      overflow: auto;
-      height: @listview-height;
-      border-top: solid lightgrey 0.3rem;
-      padding: 0;
-      list-style-type: none;
+    .digraph-listview {
+      label.filter {
+        height: @search-height;
+        border-top: solid lightgrey 0.3rem;
+        margin: 0;
+      }
+
+      .itemlist {
+        height: @listview-height;
+        overflow: auto;
+        border-top: solid lightgrey 0.3rem;
+        padding: 0;
+        list-style-type: none;
+      }
     }
   }
 }
